--- a/styles/course_progress.css
+++ b/styles/course_progress.css
@@ -4,8 +4,9 @@
 
 #courseProgressList {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 30px;
     margin-top: 20px;
 }
 
