--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -4,6 +4,12 @@ aside {
     border-right: 2px solid #E6E6E6;
     display: flex;
     flex-direction: column;
+    position: fixed;
+    background-color: #ffffff;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    top: 0;
+    bottom: 0;
 }
 
 #profileSection {
@@ -29,6 +35,7 @@ aside {
     flex-direction: row;
     padding: 16px 20px;
     cursor: pointer;
+    margin: 5px 0px;
 }
 
 .menuSidebarItem:hover {
